# Venue

./: .env.prod.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  docker-compose.yml  pytest.ini
backend/: .env.example  README.md  conftest.py  docker-compose.prod.yml  pyproject.toml  setup.cfg
backend/apps/: __init__.py
backend/apps/bookings/: admin.py  models.py  serializers.py  views.py
backend/apps/bookings/migrations/: 0001_initial.py  0002_add_database_indexes.py
backend/apps/bookings/tests/: __init__.py  test_models.py  test_views.py
backend/apps/users/: __init__.py  admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/users/migrations/: 0002_alter_user_groups.py  0003_user_is_registration_completed.py  __init__.py
backend/apps/users/tests/: __init__.py  test_models.py  test_services.py  test_views.py
backend/apps/venues/: admin.py  serializers.py  services.py  translation.py  urls.py
backend/apps/venues/migrations/: 0002_venueimage.py  __init__.py
backend/apps/venues/models/: __init__.py  venue_image.py
backend/apps/venues/tests/: __init__.py  test_models.py  test_views.py
backend/config/: asgi.py  urls.py
backend/config/settings/: __init__.py  base.py  development.py
backend/core/: __init__.py  exception_handler.py  exceptions.py  permissions.py
backend/docker/: Dockerfile  Dockerfile.prod  init.sql  nginx.conf
backend/requirements/: base.txt  development.txt  production.txt
config/: __init__.py  urls.py  wsgi.py
core/: exception_handler.py  exceptions.py  models.py  permissions.py  utils.py
docker/: Dockerfile.prod
docs/: ProjectPlan.md  README.md
frontend/: eslint.config.js  index.html  (+4 more)
(+72 files in other folders)
